@@ -243,5 +243,6 @@ Jean-Charles.Lambert@oamp.fr
 03-Mar-05	 V1.30: memory bugs fixed, keybits added  JCL
 	                valgrind mem/leak safe            
 24-Apr-06	 V1.31: memory leak fixed                 JCL
+19-Jun-06	 V1.32: happy gfortran                    JCL
 
 .fi
