@@ -1,5 +1,5 @@
 /* =================================================================
-|  Copyright Jean-Charles LAMBERT - 2005                            
+|  Copyright Jean-Charles LAMBERT - 2006                            
 |  e-mail:   Jean-Charles.Lambert@oamp.fr                           
 |  address:  Dynamique des galaxies                                 
 |            Laboratoire d'Astrophysique de Marseille               
@@ -18,6 +18,8 @@
 | 18-Mar-04	 V1.21: bugs fixed, softening added              JCL
 | 03-Mar-05	 V1.30: memory bugs fixed, nemo control bits     JCL
 |                       added, valgrind mem/leak safe               
+| 24-Apr-06      V1.31: memory leak fixed                        JCL
+| 19-Jun-06      V1.32: happy gfortran                           JCL
 +----------------------------------------------------------------  */
 
 /* -----------------------------------------------------------------
