@@ -1,5 +1,10 @@
 io_nemo ChangeLog
 
+19-Jun-2006 (Version 1.32)
+==========================
+
+- happy gfortran
+
 24-Avr-2006 (Version 1.31)
 ==========================
 
